Completed Final Project

--- a/Combining_Models.ipynb
+++ b/Combining_Models.ipynb
@@ -165,7 +165,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below I will combine the Random Forest and the Support Vector Machine models to only make predictions when they both agree on the winner."
+    "## Random Forest and the Support Vector Machine combo:\n",
+    "The models vote on the winner and only make predictions when they both agree."
    ]
   },
   {
@@ -224,7 +225,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, combining both predictions results in an improvement in the accuracy score. Now I will run the same test with the Random Forest and the XG Boost:"
+    "As we can see, combining both predictions results in an improvement in the accuracy score. \n",
+    "\n",
+    "## Random Forest and the XG Boost combo:"
    ]
   },
   {
@@ -284,7 +287,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again we see that combining the models impoved the accuracy score, although this time only very slightly. Now I will do the same thing for the SVM and XG Boost models:"
+    "Again we see that combining the models impoved the accuracy score, although this time only very slightly. \n",
+    "##  SVM and XG Boost combo:"
    ]
   },
   {
@@ -343,7 +347,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once again we see that combining the models improves the accuracy score. Now I will do the same for all three models:"
+    "Once again we see that combining the models improves the accuracy score. \n",
+    "\n",
+    "## All three model combo:"
    ]
   },
   {
@@ -420,6 +426,13 @@
     "|All Three|63.77%|5.13%|6.21%|\n",
     "\n",
     "In light of these results, I am choosing the combination of Support Vector Machines and XG Boost as my final model.  In the next section, I will dive into evaluating how good of a predictor this model is."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For the next section please see the notebook titled \"Evaluting_Final_Model\""
    ]
   },
   {
