--- a/Comparing_Models.ipynb
+++ b/Comparing_Models.ipynb
@@ -131,6 +131,7 @@
    "source": [
     "In order to get the be able to carry through the betting odds for post modeling analysis, I have created a framework for doing train-test splits that is slightly different than normal.  For all cross-validation tests I will use the same randomeness settings to isolate the model's performance.\n",
     "\n",
+    "## Random Forest Classifier:\n",
     "I will begin by examining the Random Forest Classifier, both with default settings and with some tuning."
    ]
   },
@@ -418,7 +419,7 @@
    "source": [
     "By tuning parameters we were able to achieve a model that averages almost 60% of games correct and a return on risk of 4.3%.  This is a significant improvement over the default scores of 54% test accuracy and a slightly negative return on risk.\n",
     "\n",
-    "Lets try the same thing with the AdaBoost algorithm."
+    "## AdaBoost algorithm:"
    ]
   },
   {
@@ -690,7 +691,7 @@
    "source": [
     "The results of the AdaBoost algorithm were significantly worse than the Random Forest and we can throw out the AdaBoost as it is not useful for our purposes.\n",
     "\n",
-    "Next we will examine Support Vector Machines in the same way."
+    "## Support Vector Machines:"
    ]
   },
   {
@@ -1035,7 +1036,7 @@
    "source": [
     "This result is interesting because there is a very clear winner and also gamma appears to have no impact on the results.\n",
     "\n",
-    "For the fourth and final model, I will test the XG Boost algorithm."
+    "## XG Boost algorithm:"
    ]
   },
   {
@@ -1393,6 +1394,13 @@
     "|XG Boost|60.9%|3.4%|3.1%|\n",
     "\n",
     "Interestingly, none of the three models matched the accuracy of the Vegas odds but they all generated a higher return on risk.  This suggests that the models are better at picking the underdog and benefiting from the higher payout.  In the next section, I will be taking the parameters for these three models and attempting to combine them to make an even more predictive model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For the next section please see the notebook titled \"Combining_Models\""
    ]
   },
   {
