--- a/Data_Exploration_and_Visualization.ipynb
+++ b/Data_Exploration_and_Visualization.ipynb
@@ -418,6 +418,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For the next section please see the notebook titled \"Comparing_Models\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
