--- a/Data_Gathering_and_Preprocessing.ipynb
+++ b/Data_Gathering_and_Preprocessing.ipynb
@@ -782,6 +782,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For the next section please see the notebook titled \"Data_Exploration_and_Visualization\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
