--- a/Evaluating_Final_Model.ipynb
+++ b/Evaluating_Final_Model.ipynb
@@ -349,6 +349,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusions:\n",
+    "- I was able to create a model that predicts MLB games more accurately and more profitably than the Vegas odds in a statistically significant way.  I did this by querying data from several online baseball databases and then optimizing several different classification models, before combining them to vote on the outcome of each game. \n",
+    "- Oddly enough, it seems that always betting with the Vegas odds is a profitable strategy but using the model created in this project is potentially almose twice as profitable.\n",
+    "\n",
+    "# Future Work:\n",
+    "For further exploration, I would use more types of data (new and highly advanced statistics) and more games from previous seasons. I would also automate the process of gathering the necessary data for today's games and publishing a report of which games to bet on."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
